fixed z-index issue in safari

--- a/src/components/ResultPage/index.css
+++ b/src/components/ResultPage/index.css
@@ -100,6 +100,8 @@
   height: calc(100% - 3px);
   transform: rotateY(35deg);
   transform-origin: right;
+  /*webkit transform fix the z-index issue for safari*/
+  -webkit-transform: translate3d(0, 0, 0);
   transition: all 500ms ease-in-out;
 }
 
